force-app/main/default/objects/Sale__c/Sale__c.object-meta.xml
<CustomObject>
    <description>Stores information about product sales</description>
    <label>Sale</label>
    <nameField>
        <label>Sale Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>