force-app/main/default/objects/Sale__c/fields/Price_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Unit__c</fullName>
    <description>tells us about the net price of product per unit</description>
    <label>Price per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>