force-app/main/default/objects/Sale__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Stores the name of the product being sold</description>
    <inlineHelpText>Enter the full product name (Ex:-iphoone 14 pro max)</inlineHelpText>
    <label>Product Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>