force-app/main/default/objects/Sale__c/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <description>When the sale happened.</description>
    <label>Sale Date</label>
    <type>Date</type>
</CustomField>